--- a/app/views/pizarras/_pizarraSearch.html.erb
+++ b/app/views/pizarras/_pizarraSearch.html.erb
@@ -1,6 +1,6 @@
 <form action="/pizarras/search" method="get">
-  <div> <input name="q" type="text" value=""> <div>
-   <div><%= image_submit_tag "/images/buscar.gif" %></div>
+   <div> <input name="q" type="text" value="" size="40" > </div> 
+   <div id="searchbutton"><%= image_submit_tag "/images/buscar.gif" %></div>
 </form>
 
 
