--- a/app/views/pizarras/index.html.erb
+++ b/app/views/pizarras/index.html.erb
@@ -1,31 +1,30 @@
 <% current_menu_item 'home'%>
 
-<h2>Pizarras:</h2>
+
 
 <!--#################### div buscador ##################### -->
   
   <div id="contentBuscador" > 
+   Buscador de Avisos
+  
+     <%= render :partial=> "pizarraSearch" %>
    
-   <div id='separator'></div>
-   
-    <fieldset id="fieldsetBuscador" >
-      <legend> B&uacute;squeda de Avisos </legend>
-          <%= render   :partial    => "pizarraSearch" %>
-   </fieldset>
     
      &nbsp;&nbsp;&nbsp;  
   
   </div>
   
-  <!-- ############## Bloque Login ############ -->
-   <div>   
-     <%= render :partial=> "/sessions/new" %>
-   </div>
+
+
+
+
   
   <!-- ############## FIN Bloque Login ############ --> 
   
   <div class='contentHome'>
-    <table style="">
+    Pizarras
+   
+   <table style="text-align:center;margin: 0 auto;text-align: left;">
      <!-- ############## encabezado ############ -->
      <tr>
        <td align="center" style="width:260px">
@@ -41,7 +40,7 @@
       
       <td align="center" style="border-bottom:solid 1px #7CE1E1;">
         
-         <table style="margin-left:80px;">
+         <table >
           <tr>
             <td  >
                <%= link_to image_tag("/images/ver3.jpg", 
@@ -70,5 +69,5 @@
      
   </table>
   
-  
+   
  </div> 
